Changelog Notes:
Super Immune now decreases sickness if well fed, allowing for survival even with sandbox setting on.
Fixed duplicate alcoholic trait showing up when More Simple Traits mod is enabled.
Add Italian Translation, by Lore11.
Fix null pointer exception when Announce Vagabond finds setting is enabled.
Reduce maximum distance out to which Bouncer will trigger.
Add sandbox option to adjust distance for Bouncer.