@@ -4,7 +4,7 @@ UI_EN = {
     UI_trait_preparedfood = "Prepared: Food",
     UI_trait_preparedfooddesc = "You were prepared and stocked-up on food before civilization fell.<br>You begin the game with a stock of food in your inventory.",
     UI_trait_preparedammo = "Prepared: Ammo",
-    UI_trait_preparedammodesc = "You were prepared and stocked-up on ammunition before civilization fell.<br>You begin the game with a stock of 9mm and shotgun shell ammunition in your inventory.",
+    UI_trait_preparedammodesc = "You were prepared and stocked-up on ammunition before civilization fell.<br>You begin the game with a modest amount of various types of ammunition in your inventory.",
     UI_trait_preparedmedical = "Prepared: Medical",
     UI_trait_preparedmedicaldesc = "You were prepared and stocked-up on medical supplies before civilization fell.<br>You begin the game with a stock of medical supplies in your inventory.",
     UI_trait_preparedrepair = "Prepared: Carpentry",
